# easytalk

./: .gitignore  README.md  about-project.md  client_improvement_plan.md  firebase.json  integration_plan.md  openapi.json
backend/: .firebaserc  .gitignore  README.md  __init__.py  conftest.py  dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
backend/app/: main.py
backend/app/application/interfaces/: achievement_repository.py  game_session_repository.py  user_repository.py
backend/app/config/: settings.py
backend/domain/: __init__.py  achievement.py  achievement_catalog.py  progress.py  session.py  user.py
backend/repositories/: __init__.py  achievement_repository.py  progress_repository.py  session_repository.py  user_repository.py
backend/routers/: __init__.py  achievement_router.py  content_router.py  profile_router.py  progress_router.py  session_router.py
backend/scripts/: run.sh  seed_achievements.py  seed_data.py  seed_games.py  sentences.json  setup.sh
backend/services/: __init__.py  achievement_service.py  auth_service.py  progress_service.py  session_service.py
backend/shared/: __init__.py  auth.py  config.py  dependencies.py  firebase_client.py  logging_config.py  utils.py
backend/tests/: conftest.py  test_firebase_mocks.py
backend/tests/domain/: test_achievement_model.py  test_session_model.py  test_user_model.py
backend/tests/repositories/: test_achievement_repository.py  test_progress_repository.py  test_session_repository.py  test_user_repository.py
backend/tests/routers/: test_content_router.py  test_profile_router.py  test_progress_router.py  test_session_router.py
backend/tests/services/: test_achievement_service.py  test_auth_service.py  test_progress_service.py  test_session_service.py
diagrams/: game_session_flow.mmd  (+3 more)
(+140 files in other folders)
