[project]
name = "easytalk"
version = "0.1.0"
description = ""
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin (>=6.9.0,<7.0.0)",
    "google-cloud-firestore (>=2.21.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
